# AR_vague_llm

./: .gitignore  README.md  pyproject.toml
artifacts/: corruption_metrics.md  corruption_table.md  corruptions.jsonl
data/: meeting_summaries_seed.jsonl
docs/: ar_guided_token_adaptive_text2sql.md
scripts/: run_remote_ar_transition_experiment.sh  run_remote_bidirectional_qwen_experiment.sh  run_remote_diffusion_experiment.sh  run_seed_experiment.sh
src/ar_gstd/: __init__.py  analyze_transition_cache.py  bidirectional_denoising.py  bidirectional_qwen.py  build_ar_token_scores.py  build_transition_cache.py  corruption.py  evaluate_bidirectional_qwen_denoiser.py  evaluate_corruptions.py  evaluate_denoiser.py  filter_eval_by_category.py  generate_corruptions.py  inspect_tokenizers.py  make_fixed_transition_cache.py  materialize_clean_training_data.py  materialize_diffusion_training_data.py  materialize_training_data.py  prepare_sql_create_context.py  summarize_metrics.py  token_scores.py  train_bidirectional_qwen_denoiser.py  train_seq2seq_denoiser.py  (+1 more)
tests/: test_analyze_transition_cache.py  test_bidirectional_denoising.py  test_build_transition_cache.py  test_corruption.py  test_evaluate_bidirectional_qwen_denoiser.py  test_evaluate_corruptions.py  test_evaluate_denoiser.py  test_filter_eval_by_category.py  test_inspect_tokenizers.py  test_materialize_clean_training_data.py  test_materialize_diffusion_training_data.py  test_prepare_sql_create_context.py  test_summarize_metrics.py  test_token_scores.py  test_train_seq2seq_denoiser.py  test_transitions.py
